parser/testdata/invalid/unclosed_list.oc
# Error: list missing closing bracket.
agent a {
  tools = [web_search, gmail
}
